Resolved Fix#4 Modified alignment for livesearch on reports page

--- a/css/style.css
+++ b/css/style.css
@@ -379,9 +379,9 @@
     position:absolute;
     margin-top: -3.3em;
   }
+
   .search-results-table {
   margin-top: 15px !important;
-  margin-left: 89px;
   }
 
   .reports-table {
